Avoid tab bar wrapping on profile

--- a/askbot/media/style/style.less
+++ b/askbot/media/style/style.less
@@ -1070,8 +1070,7 @@ body.anon.ask-page .search-drop-menu {
     margin-bottom: 3px;
     margin-top: 3px;
     float:right;
-    font-family: @sort-font;
-    font-size:16px;
+    font-size:14px;
     .rounded-corners(5px);
 }
 
